# cpp-projects

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
snake_game/src/: CMakeLists.txt  board.cpp  board.h  main.cpp  snake.cpp  snake.h
