cmake_minimum_required(VERSION 3.28)

project(Snake-game)

set( CMAKE_CXX_COMPILER "C:\tools\winlibs-x86_64-posix-seh-gcc-13.2.0-mingw-w64ucrt-11.0.1-r5\mingw64\bin" )
set( CMAKE_C_COMPILER "C:\tools\winlibs-x86_64-posix-seh-gcc-13.2.0-mingw-w64ucrt-11.0.1-r5\mingw64\bin" )

add_executable(Snake-game main.cxx)